--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html, body {
     background-color: hsl(265, 54%, 46%);
     background-image: url('./images/bg-desktop.svg');
     background-repeat: no-repeat;
-    width: 100%;
+    height: 506px;
 }
 nav img {
     padding-left: 50px;
@@ -54,6 +54,11 @@ main .main-text .boton:hover {
     border: 2px solid;
 }
 footer {
+    padding-bottom: 2px;
+    background-color: aliceblue;
+    height: 100px;
+}
+footer .contenedor {
     padding-bottom: 0px;
 }
 footer ul {
@@ -63,7 +68,7 @@ footer ul {
 }
 footer li {
     display: inline-flex;
-    padding: 9px;
+    padding-right: 20px;
 }
 footer img {
     width: 30px; height: 30px;
@@ -114,10 +119,7 @@ footer img {
     footer img {
         width: 40px; height: 40px;
     }
-    footer {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 50%;
+    footer .contenedor {
+        padding-bottom: 0rem;
     }
 }
