--- a/style.css
+++ b/style.css
@@ -6,13 +6,12 @@
 html, body {
     font-size: 62.5%;
     font-family: sans-serif;
-    height: 100%;
+    background-color: hsl(265, 54%, 46%);
 }
 .fondo {
-    background-color: hsl(265, 54%, 46%);
     background-image: url('./images/bg-desktop.svg');
     background-repeat: no-repeat;
-    height: 506px;
+    height: 100%;
 }
 nav img {
     padding-left: 50px;
@@ -54,27 +53,23 @@ main .main-text .boton:hover {
     border: 2px solid;
 }
 footer {
-    padding-bottom: 2px;
-    background-color: aliceblue;
-    height: 100px;
-}
-footer .contenedor {
-    padding-bottom: 0px;
+    padding: 0;
+    margin: 0;
 }
 footer ul {
     display: flex;
     justify-content: flex-end;
-    padding-right: 50px;
 }
 footer li {
     display: inline-flex;
-    padding-right: 20px;
+    padding-right: 25px;
 }
 footer img {
     width: 30px; height: 30px;
+    filter: invert(100%);
 }
 
-@media screen and (max-width: 1333px) {
+@media screen and (max-width: 1024px) {
     main .main-text {
         font-size: 2rem;
         padding: 5rem;
@@ -83,16 +78,20 @@ footer img {
         width: 550px;
     }
 }
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 768px) {
+    main img {
+        padding: 3rem;
+    }
     main {
-        display: block;
+        display: flex;
+        flex-wrap: wrap;
         padding: 1px;
         margin-left: auto;
         margin-right: auto;
         width: 90%;
     }
     main .main-text {
-        font-size: 1.8rem;
+        font-family: Arial, Helvetica, sans-serif;
         color: white;
         width: 100%;
         max-width: 540px;
@@ -103,23 +102,38 @@ footer img {
     }
     main .main-text .boton {
         border-radius: 3.5rem;
-        padding: 2rem 10rem;
+        padding: 1.6rem 13rem;
         border: 1px solid grey;
     }
     main .main-text h1 {
+        font-size: 3rem;
         padding-top: 2rem;
         padding-bottom: 2rem;
     }
     main .main-text p {
-        padding-bottom: 2rem;
+        padding-bottom: 4rem;
+        font-size: 2.8;
     }
-    footer li {
-        padding: 10px;
+    footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 3rem;
     }
     footer img {
         width: 40px; height: 40px;
     }
-    footer .contenedor {
-        padding-bottom: 0rem;
+    nav img {
+        padding-bottom: 3rem;
+        padding-left: 0;
+        width: 100%;
+        max-width: 264px;
+        height: auto;
+    }
+    nav {
+        display: flex;
+        align-items: flex-start;
+        justify-content: right;
+        padding-left: 5rem;
     }
 }
