--- a/style.css
+++ b/style.css
@@ -46,11 +46,12 @@ main .main-text p {
 }
 main .main-text .boton {
     border-radius: 3.5rem;
-    padding: 2rem 9rem;
+    padding: 1.5rem 10rem;
     border: 1px solid grey;
 }
 main .main-text .boton {
     font-size: 20px;
+    color: hsl(265, 54%, 46%);
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 main .main-text .boton:hover {
